<resources>
    <string name="app_name">Playtang</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyD_aGafH5mEziWja7_C8-8KFHmgO2kZcC0
    </string>


    <string name="app_id">1192310510785841</string>
    <string name="facebook_app_name">Playtang</string>

    <string name="title_activity_main_app">MainAppActivity</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_activity_play_tang_home">PlayTangHomeActivity</string>

    <string name="welcome_playtang">Welcome to PlayTang</string>
    <string name="search_playground">Search for a Playground</string>
    <string name="book_playground">Book Your Time Slot</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
	
	<string name="action_example">Example action</string>
    <string name="zicon_about_rocket">;</string>
    <string name="zicon_acceptance"></string>
    <string name="zicon_add_to_cart"></string>
    <string name="zicon_android_back_icon"></string>
    <string name="zicon_bell">ñ</string>
    <string name="zicon_bio">Ð</string>
    <string name="zicon_booking">}</string>
    <string name="zicon_call">p</string>
    <string name="zicon_car_pune">A</string>
    <string name="zicon_cart"></string>
    <string name="zicon_coin_stack"></string>
    <string name="zicon_comment">∞</string>
    <string name="zicon_connected">ó</string>
    <string name="zicon_cross">X</string>
    <string name="zicon_cross_fill"></string>
    <string name="zicon_down_arrow">ý</string>
    <string name="zicon_down_arrow_thick"></string>
    <string name="zicon_down_arrow_thin"></string>
    <string name="zicon_draw_circle">u</string>
    <string name="zicon_edit">[</string>
    <string name="zicon_enjoy_your_meal"></string>
    <string name="zicon_expertise">Î</string>
    <string name="zicon_facebook">ª</string>
    <string name="zicon_filter"></string>
    <string name="zicon_filter_applied">¨</string>
    <string name="zicon_find_friends">N</string>
    <string name="zicon_finger_draw">\#</string>
    <string name="zicon_follow">Q</string>
    <string name="zicon_followed">U</string>
    <string name="zicon_link"></string>
    <string name="zicon_list"></string>
    <string name="zicon_location"></string>
    <string name="zicon_location_arrow">x</string>
    <string name="zicon_logo_thank">F</string>
    <string name="zicon_logo_thank_line">⁄</string>
    <string name="zicon_loyalty_empty"></string>
    <string name="zicon_loyalty_filled"></string>
    <string name="zicon_map_view">Ǎ</string>
    <string name="zicon_name">∂</string>
    <string name="zicon_no_order"></string>
    <string name="zicon_no_results">7</string>
    <string name="zicon_notification_bell"></string>
    <string name="zicon_open"></string>
    <string name="zicon_open_now">)</string>
    <string name="zicon_paperplane">‡</string>
    <string name="zicon_pizza_delivery"></string>
    <string name="zicon_plus">+</string>
    <string name="zicon_power">ò</string>
    <string name="zicon_rating_primary"></string>
    <string name="zicon_rating_secondary"></string>
    <string name="zicon_recently_viewed">≈</string>
    <string name="zicon_review_drafts"></string>
    <string name="zicon_right_arrorw">¹</string>
    <string name="zicon_rotate">∏</string>
    <string name="zicon_save_offers"></string>
    <string name="zicon_search">s</string>
    <string name="zicon_selected_checkbox">Ù</string>
    <string name="zicon_selected_radio_button">à</string>
    <string name="zicon_settings">í</string>
    <string name="zicon_share">∆</string>
    <string name="zicon_share_fill"></string>
    <string name="zicon_star_filled">þ</string>
    <string name="zicon_star_line">*</string>
    <string name="zicon_thin_location_line">l</string>
    <string name="zicon_tick_bold">9</string>
    <string name="zicon_tick_fill"></string>
    <string name="zicon_top_bloggers"></string>
    <string name="zicon_top_foodies"></string>
    <string name="zicon_twitter">•</string>
    <string name="zicon_unselected_checkbox">×</string>
    <string name="zicon_unselected_radio_button"></string>
    <string name="zicon_up_arrow_stem">À</string>
    <string name="zicon_user_profile_2"></string>
    <string name="zicon_veg_non_veg"></string>
    <string name="zicon_verified_fill">þ</string>
    <string name="zicon_waiter"></string>
    <string name="zicon_wallet">˜</string>
    <string name="zicon_wishlist">G</string>
    <string name="zicon_wishlist_fill">‹</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>	
</resources>
