<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    tools:context=".NavigationDrawerFragment">

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/drawer_user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/city_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="#254B80" />

            <RelativeLayout
                android:id="@+id/trans_layer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80FFFFFF" />

            <RelativeLayout
                android:id="@+id/user_info_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/drawer_user_profile_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp">

                    <ImageView
                        android:id="@+id/drawer_user_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/drawer_round_cornered"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_launcher" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toRightOf="@id/drawer_user_profile_container"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/drawer_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Samsung"
                        android:textColor="#FFFFFF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/drawer_user_handle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/drawer_user_name"
                        android:layout_marginTop="2dp"
                        android:text="0 reviews, 0 followers"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/drawer_notification_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp">

                <com.playtang.android.view.IconView
                    android:id="@+id/notification_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:clickable="true"
                    android:text="@string/zicon_notification_bell"
                    android:textColor="#FFFFFFFF"
                    android:textSize="20dp" />
            </RelativeLayout>

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/bookmark_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_wishlist"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/bookmark"
                android:text="BookMark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recentpg_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/recentpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_recently_viewed"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/recentpg"
                android:text="Recent PlayGround" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expertise_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/expertise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_expertise"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/expertise"
                android:text="Expertise" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center"
                android:src="#aaaaaa" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addpg_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/addpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_plus"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/addpg"
                android:text="Add PlayGround" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/findpg_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/findpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_search"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/findpg"
                android:text="Find PlayGround" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bookedpg_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/bookedpg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_save_offers"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/bookedpg"
                android:text="Booked PlayGround" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center"
                android:src="#aaaaaa" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_settings"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/setting"
                android:text="Settings" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/about_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="aboutUs"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_about_rocket"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/about"
                android:text="About" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp">

            <com.playtang.android.view.IconView
                android:id="@+id/signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:foregroundGravity="center"
                android:text="@string/zicon_power"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/signout"
                android:text="Sign Out" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
